deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swiggy-app
  labels:
    app: swiggy-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: swiggy-app
  template:
    metadata:
      labels:
        app: swiggy-app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: swiggy-app
          image: veeranarni/hotstar:latest
          #image: nginx
          imagePullPolicy: 'Always'
          ports:
            - containerPort: 3000
