ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swiggy-app-ingress
  namespace: myapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test.app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swiggy-app
                port:
                  number: 80
